# parallel-swap-mc

./: .gitignore  CMakeLists.txt  FindHOOMD.cmake  LICENSE  README.md
hpmc_swap_plugin/: EvalFactory.cc  GSDHPMCSchemaSwap.h  IntegratorHPMCPolydisperse.h  PatchEnergyJITCustom.cc  ShapeProxySwap.h  __init__.py  data.py  modules_sphere_swap.cc  modules_swap.h
hpmc_swap_plugin/test-py/: CMakeCache.txt  another.py  anothertest.py  checkoverlaps.py  continue3d.py  hpmc_mpi_test_2d.py  hpmc_mpi_test_3d.py  hpmc_serial_test_2d.py  output.out  plotting.py  plugin_mpi_test_2d.py  plugin_mpi_test_3d.py  plugin_serial_test_2d.py  plugin_serial_test_3d.py  test.py  test_1.gsd  trajectory1.gsd  trajectory1_mine_position.gsd
mcswap/: ExternalCallback.h  HPMCCountersSwap.h  PatchEnergyJITCustom.h  ShapePolydisperse.h  UpdaterBoxMCSwap.cc
swapmc/: CMakeLists.txt  GSDHPMCSchemaSwap.h  HPMCCountersSwap.h  IntegratorHPMCPolydisperse.h  IntegratorHPMCSwap.cc  IntegratorHPMCSwap.h  PatchEnergyJITCustom.cc  PatchEnergyJITCustom.h  PatchEnergyPolydisperse12.h  ShapePolydisperse.h  ShapeProxySwap.h  UpdaterBoxMCSwap.h  __init__.py  _hpmc_swap.py  data.py  integrate.py  module-jit-custom.cc  modules_sphere_swap.cc  modules_swap.cc  nohup.out  patch.py  update.py
